--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -371,3 +371,11 @@
 .card-btn:hover .quick-link {
     opacity: 1;
 }
+
+.data-table {
+    background-color: white;
+    margin-top: 20px !important;
+    margin-left: 14px !important;
+    width: 98% !important;
+    border-radius: 5px;
+}
