--- a/src/main/resources/templates/attendance/att01.html
+++ b/src/main/resources/templates/attendance/att01.html
@@ -2,8 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
     <title>ATTENDANCE_PAGE</title>
+    <title>MAIN_PAGE</title>
+    <!-- main.js 추가 -->
+    <script src="/js/domain/attendance/att01.js"></script>
+    <script th:inline="javascript">
+    </script>
 </head>
 <div layout:fragment="content">
-    <div>출/퇴근 조정</div>
+    <div class="container p-t-20">
+        <div class="row">
+            <div class="col-md-12 data-table">
+                <div id='calendar'></div>
+            </div>
+        </div>
+    </div>
 </div>
 </html>
