--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="/css/custom.css" />
         <link rel="stylesheet" href="/css/boxicons/boxicons.css" />
         <link rel="stylesheet" href="/css/bootstrap-5.3.3/bootstrap.css" />
+        <link rel="stylesheet" href="/css/datatables/datatables.min.css" />
+
     </th:block>
     <!-- js -->
     <th:block layout:fragment="js">
@@ -26,6 +28,9 @@
 
         <script src="/js/bootstrap-5.3.3/bootstrap.js"></script>
 
+        <script src="/js/datatables/datatables.min.js"></script>
+
+        <script src="/js/fullcalendar/index.global.min.js"></script>
         <script th:inline="javascript">
           let loginUser = /*[[${loginUser}]]*/ '';
           let rank = /*[[${rank}]]*/ '';
