--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -52,6 +52,11 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 data-table">
+                <table id="example" class="display" style="width:100%"></table>
+            </div>
+        </div>
     </div>
 </div>
 </html>
